--- a/org.parallelj.studio.updatesite/pom.xml
+++ b/org.parallelj.studio.updatesite/pom.xml
@@ -30,7 +30,7 @@
 						<goals>
 							<goal>generate-index</goal>
 						</goals>
-						<phase>install</phase>
+						<phase>package</phase>
 					</execution>
 				</executions>
 			</plugin>
